--- a/package.json
+++ b/package.json
@@ -25,12 +25,17 @@
     "deploy-staging": "vue-cli-service build && cd dist && surge ./ kanban-board-demo-staging.surge.sh",
     "test:unit": "vue-cli-service test:unit",
     "test:unit-watch": "vue-cli-service test:unit --watchAll",
-    "test:coverage": "vue-cli-service test:unit --coverage"
+    "test:coverage": "vue-cli-service test:unit --coverage",
+    "server": "node server/app.js "
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongodb": "^3.4.0",
     "vee-validate": "^2.2.9",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
